Added features section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,23 @@
     <div id="hero">
         <h1 id="herotitle">A new way to live, globally. </h1>
         <h4 id="herosubtitle">Flow is the first mortgage that allows you to swap homes, whenever you want.</h4>
-        <img id="heroimage" src="house.svg">
+        <img id="heroimage" src="images/house.svg">
             <div id="herobutton">           
                 <button>More information</button>
             </div>
     </div>
+    <section class="features">
+        <div class="feature">
+            <h3>The best of both rent and mortage</h3>
+            <p>Pay monthly to get a property in the future, but the payment is not attached to a single building.</p>
+            <img src="images/canvas-image.png" alt="Collaborative Canvas Example">
+        </div>
+        <div class="feature">
+            <h3>Swap cities, fast.</h3>
+            <p>Browse our catalog and move to you new city in less than 6 months. We'll take care of everything else.</p>
+            <img src="images/data-profiler-image.png" alt="Data Profiler Example">
+        </div>
+
+        <!-- Repeat for each feature -->
+    </section>    
 </body>
