Added some modifications to feature seaction
New pictures, new width and +1 feature.

--- a/index.html
+++ b/index.html
@@ -20,17 +20,24 @@
                 <button>More information</button>
             </div>
     </div>
+    <h2 id="featurestitle">What can you expect from Flow?</h2>
     <section class="features">
         <div class="feature">
             <h3>The best of both rent and mortage</h3>
             <p>Pay monthly to get a property in the future, but the payment is not attached to a single building.</p>
-            <img src="images/canvas-image.png" alt="Collaborative Canvas Example">
+            <img src="images/rent.svg" alt="Collaborative Canvas Example">
         </div>
         <div class="feature">
             <h3>Swap cities, fast.</h3>
             <p>Browse our catalog and move to you new city in less than 6 months. We'll take care of everything else.</p>
-            <img src="images/data-profiler-image.png" alt="Data Profiler Example">
+            <img src="images/swap.svg" alt="Data Profiler Example">
         </div>
+        <div class="feature">
+            <h3>Owner of your future</h3>
+            <p>Get back your money whenever you want. We'll keep it for you, as long as you want.</p>
+            <img src="images/owner.svg" alt="Data Profiler Example">
+        </div>
+
 
         <!-- Repeat for each feature -->
     </section>    
