Added new navbar with new flexbox knowledge
· Added new logo.
· Added totally new navbar using flexbox capacities.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
 </head>    
 
 <body>
-    <div class="navbar">
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#news">Our product</a></li>
-            <li><a href="#contact">Our team</a></li>
-            <li><a href="#about">Contact</a></li>
-        </ul>
+    <section class="navbar">
+        <div>
+            <img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo">
+        </div>
+        <div class="navbartext">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div id="navbarbutton">
+            <button>Get a call</button>
+        </div>
+    </section>
+
     </div>
     <div id="hero">
         <h1 id="herotitle">A new way to live, globally. </h1>
@@ -38,7 +47,9 @@
             <img src="images/owner.svg" alt="Data Profiler Example">
         </div>
 
-
         <!-- Repeat for each feature -->
-    </section>    
+    </section>  
+        <div class="container1">
+            <h5 id="testtext1">Holahola!</h1>
+        </div>
 </body>
