Learning and playing with grid
· Added my first basic grid display.
· Added images from different cities.

--- a/index.html
+++ b/index.html
@@ -46,10 +46,17 @@
             <p>Get back your money whenever you want. We'll keep it for you, as long as you want.</p>
             <img src="images/owner.svg" alt="Data Profiler Example">
         </div>
+        </section>
 
-        <!-- Repeat for each feature -->
-    </section>  
-        <div class="container1">
-            <h5 id="testtext1">Holahola!</h1>
+    <section id="citiesselector"></section>
+        <h2>Where do you want to live?</h2>
+        <div class="cities">
+            <img src="images/barcelona.webp" alt="Scenic picture of the city of Barcelona">
+            <img src="images/Madrid.webp" alt="Scenic picture of the city of Madrid">
+            <img src="images/newyork.webp" alt="Scenic picture of the city of New York">
+            <img src="images/berlin.jpeg" alt="Scenic picture of the city of Berlin">
+            <img src="images/paris.jpeg" alt="Scenic picture of the city of Paris">
+            <img src="images/london.jpeg" alt="Scenic picture of the city of London">
         </div>
+    </section>
 </body>
