Working on grids
· Added responsive grids.
· New pictures for cities
· Some minor changes (color adjustment, added CSS for h2, etc.)

--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
         </div>
         </section>
 
-    <section id="citiesselector"></section>
+    <section id="citiesselector">
         <h2>Where do you want to live?</h2>
         <div class="cities">
-            <img src="images/barcelona.webp" alt="Scenic picture of the city of Barcelona">
-            <img src="images/Madrid.webp" alt="Scenic picture of the city of Madrid">
-            <img src="images/newyork.webp" alt="Scenic picture of the city of New York">
-            <img src="images/berlin.jpeg" alt="Scenic picture of the city of Berlin">
-            <img src="images/paris.jpeg" alt="Scenic picture of the city of Paris">
-            <img src="images/london.jpeg" alt="Scenic picture of the city of London">
+            <img src="images/Barcelonapicture.png" alt="Scenic picture of the city of Barcelona">
+            <img src="images/Madridpicture.png" alt="Scenic picture of the city of Madrid">
+            <img src="images/Newyorkpicture.png" alt="Scenic picture of the city of New York">
+            <img src="images/Berlinpicture.png" alt="Scenic picture of the city of Berlin">
+            <img src="images/Parispicture.png" alt="Scenic picture of the city of Paris">
+            <img src="images/Londonpicture.png" alt="Scenic picture of the city of London">
         </div>
     </section>
-</body>
