Adding more content to the website
· Added one more raw section using grid techniques.
· Added simple footer.
· Added social media images.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li>Contact</li>
             </ul>
         </div>
-        <div id="navbarbutton">
+        <div id="">
             <button>Get a call</button>
         </div>
     </section>
@@ -58,4 +58,30 @@
             <img src="images/Parispicture.png" alt="Scenic picture of the city of Paris">
             <img src="images/Londonpicture.png" alt="Scenic picture of the city of London">
         </div>
+    </section>
+
+    <section id="feature1">
+        <div class="f1text">
+            <h2>Lorem ipsum</h2>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras maximus magna nec sagittis ullamcorper. Morbi sodales risus quis erat dignissim.</h4>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras maximus magna nec sagittis ullamcorper. Morbi sodales risus quis erat dignissim.</h4>
+            <button>Know more about Flexible Mortgage</button>
+        </div>
+        <div class="f1img">
+            <img src="images/rent.svg" alt="Illustration depicting a building and two people walking on the street">
+        </div>
+    </section>
+
+    <section id="footer">
+        <div class="footerinfo">
+            <h4>Flow is the new way to own a property. We aim to make everyone's live more fun, flexible and global.</h4>
+            <h5>All rights reserved @ Flow Company Inc.</h5>
+        </div>
+        <div class="footersocialmedia">
+            <h4>Follow us on</h4>
+            <div class="socialmedia"></div>
+                <img src="images/linkedinlogo.png" alt="LinkedIn Logo">
+                <img src="images/twitterlogo.png" alt="TwitterLogo">
+                <img src="images/instagramlogo.png" alt="InstagramLogo">
+            </div>
     </section>
