--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <h1 id="herotitle">A new way to live, globally. </h1>
         <h4 id="herosubtitle">Flow is the first mortgage that allows you to swap homes, whenever you want.</h4>
         <img id="heroimage" src="images/house.svg">
-            <div id="herobutton">           
-                <button>More information</button>
+            <div id="herobuttons">           
+                <button class="herobtnmoreinfo">More info</button>
+                <button class="herobtncalculate">Calculate</button>
             </div>
     </div>
     <h2 id="featurestitle">What can you expect from Flow?</h2>
@@ -49,7 +50,7 @@
         </section>
 
     <section id="citiesselector">
-        <h2>Where do you want to live?</h2>
+        <h2 class="citiestitle">Where do you want to live?</h2>
         <div class="cities">
             <img src="images/Barcelonapicture.png" alt="Scenic picture of the city of Barcelona">
             <img src="images/Madridpicture.png" alt="Scenic picture of the city of Madrid">
