--- a/index.html
+++ b/index.html
@@ -73,16 +73,37 @@
         </div>
     </section>
 
-    <section id="footer">
+    <footer>
         <div class="footerinfo">
-            <h4>Flow is the new way to own a property. We aim to make everyone's live more fun, flexible and global.</h4>
-            <h5>All rights reserved @ Flow Company Inc.</h5>
-        </div>
-        <div class="footersocialmedia">
-            <h4>Follow us on</h4>
-            <div class="socialmedia"></div>
-                <img src="images/linkedinlogo.png" alt="LinkedIn Logo">
-                <img src="images/twitterlogo.png" alt="TwitterLogo">
-                <img src="images/instagramlogo.png" alt="InstagramLogo">
+            <h2 class="h2footer">Go free, now</h2>
+            <h4 class="h4footer">Flow is the new way to own a property. We aim to make everyone's live more fun, flexible and global.</h4>
+            <img class="flowlogofooter" src="images/flowlogogray.png" alt="Flow Logo">
+            <div class="footersocialmedia">
+                <div class="socialmedia"></div>
+                    <img src="images/linkedinlogowhite.svg" alt="LinkedIn Logo">
+                    <img src="images/xlogowhite.svg" alt="TwitterLogo">
+                    <img src="images/instagramlogowhite.svg" alt="InstagramLogo">
+                </div>
             </div>
-    </section>
+        </div>
+            <div></div>
+            <div class="footerlinks">
+                <h4 class="footerlinkstitle">Product</h4>
+                <h5>Flow's flexible mortgage</h5>
+                <h5>Available cities</h5>
+                <h5>Mortgage calculator</h5>
+                <h5>People who trust on us</h5>
+            </div>
+            <div class="footerlinks">
+                <h4 class="footerlinkstitle">About us</h4>
+                <h5>Our mission</h5>
+                <h5>Our team</h5>
+                <h5>Flow on the news</h5>
+            </div>
+            <div></div>
+    </footer>
+    <div class="complianceline">
+        <div>Copyright</div>
+        <div>Privacy Policy</div>
+        <div>Terms of service</div>
+    </div>
