Some html modifications
Modified some text from a section

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
     <section id="feature1">
         <div class="f1text">
-            <h2>Lorem ipsum</h2>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras maximus magna nec sagittis ullamcorper. Morbi sodales risus quis erat dignissim.</h4>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras maximus magna nec sagittis ullamcorper. Morbi sodales risus quis erat dignissim.</h4>
+            <h2>Live your life in another way</h2>
+            <h4>Flow flexible mortgage is designed to move with you, wherever you want or need. Don't worry anymore about the downsides of rents or to sell your property if you want to move to another place.</h4>
+            <h4>Let us know with 6 months of advance where you want to live, and we will take care of the hassle of switching homes</h4>
             <button>Know more about Flexible Mortgage</button>
         </div>
         <div class="f1img">
@@ -81,7 +81,7 @@
             <div class="footersocialmedia">
                 <div class="socialmedia"></div>
                     <img src="images/linkedinlogowhite.svg" alt="LinkedIn Logo">
-                    <img src="images/xlogowhite.svg" alt="TwitterLogo">
+                    <img src="images/xlogowhite.svg" alt="XLogo">
                     <img src="images/instagramlogowhite.svg" alt="InstagramLogo">
                 </div>
             </div>
