--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html lang="en-US">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <title>Flexible mortgages for the new world</title>
+    <link rel="icon" href="images/Flowlogo.png">
 </head>    
 
 <body>
@@ -107,3 +110,4 @@
         <div>Privacy Policy</div>
         <div>Terms of service</div>
     </div>
+</html>
