--- a/index.html
+++ b/index.html
@@ -1,58 +1,56 @@
 <!DOCTYPE html>
-<html lang="en-US">
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Flexible mortgages for the new world</title>
-    <link rel="icon" href="images/Flowlogo.png">
-</head>    
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <title>Flexible mortgages for the new world</title>
+        <link rel="icon" href="images/Flowlogo.png">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
 
 <body>
-    <section class="navbar">
-        <div>
-            <img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo">
-        </div>
-        <div class="navbartext">
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
-        </div>
-        <div id="">
-            <button>Get a call</button>
-        </div>
-    </section>
+    <nav>
+        <img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+        <button>Get a call</button>
+    </nav>
 
-    </div>
-    <div id="hero">
+    </header id="hero">
         <h1 id="herotitle">A new way to live, globally. </h1>
         <h4 id="herosubtitle">Flow is the first mortgage that allows you to swap homes, whenever you want.</h4>
         <img id="heroimage" src="images/house.svg">
-            <div id="herobuttons">           
-                <button class="herobtnmoreinfo">More info</button>
-                <button class="herobtncalculate">Calculate</button>
-            </div>
-    </div>
-    <h2 id="featurestitle">What can you expect from Flow?</h2>
-    <section class="features">
-        <div class="feature">
-            <h3>The best of both rent and mortage</h3>
-            <p>Pay monthly to get a property in the future, but the payment is not attached to a single building.</p>
-            <img src="images/rent.svg" alt="Collaborative Canvas Example">
+        <div id="herobuttons">           
+            <button class="herobtnmoreinfo">More info</button>
+            <button class="herobtncalculate">Calculate</button>
         </div>
-        <div class="feature">
-            <h3>Swap cities, fast.</h3>
-            <p>Browse our catalog and move to you new city in less than 6 months. We'll take care of everything else.</p>
-            <img src="images/swap.svg" alt="Data Profiler Example">
-        </div>
-        <div class="feature">
-            <h3>Owner of your future</h3>
-            <p>Get back your money whenever you want. We'll keep it for you, as long as you want.</p>
-            <img src="images/owner.svg" alt="Data Profiler Example">
-        </div>
-        </section>
+    </header>
 
-    <section id="citiesselector">
+    <section>
+        <h2 id="featurestitle">What can you expect from Flow?</h2>
+            <div class="featuresdiv">
+                <div class="feature">
+                    <h3>The best of both rent and mortage</h3>
+                    <p>Pay monthly to get a property in the future, but the payment is not attached to a single building.</p>
+                    <img src="images/rent.svg" alt="Illustration of a flat in a neighbourhood">
+                </div>
+                <div class="feature">
+                    <h3>Swap cities, fast.</h3>
+                    <p>Browse our catalog and move to you new city in less than 6 months. We'll take care of everything else.</p>
+                    <img src="images/swap.svg" alt="Illustration of a woman standing up and walking">
+                </div>
+                <div class="feature">
+                    <h3>Owner of your future</h3>
+                    <p>Get back your money whenever you want. We'll keep it for you, as long as you want.</p>
+                    <img src="images/owner.svg" alt="Illustration of a family of three members: mother, kid and father hanging their hands together while walking">
+                </div>
+            </div>
+    </section>
+
+    <section>
         <h2 class="citiestitle">Where do you want to live?</h2>
         <div class="cities">
             <img src="images/Barcelonapicture.png" alt="Scenic picture of the city of Barcelona">
@@ -67,8 +65,8 @@
     <section id="feature1">
         <div class="f1text">
             <h2>Live your life in another way</h2>
-            <h4>Flow flexible mortgage is designed to move with you, wherever you want or need. Don't worry anymore about the downsides of rents or to sell your property if you want to move to another place.</h4>
-            <h4>Let us know with 6 months of advance where you want to live, and we will take care of the hassle of switching homes</h4>
+            <p>Flow flexible mortgage is designed to move with you, wherever you want or need. Don't worry anymore about the downsides of rents or to sell your property if you want to move to another place.</p>
+            <p>Let us know with 6 months of advance where you want to live, and we will take care of the hassle of switching homes</p>
             <button>Know more about Flexible Mortgage</button>
         </div>
         <div class="f1img">
@@ -79,10 +77,9 @@
     <footer>
         <div class="footerinfo">
             <h2 class="h2footer">Go free, now</h2>
-            <h4 class="h4footer">Flow is the new way to own a property. We aim to make everyone's live more fun, flexible and global.</h4>
+            <p class="pfooter">Flow is the new way to own a property. We aim to make everyone's live more fun, flexible and global.</p>
             <img class="flowlogofooter" src="images/flowlogogray.png" alt="Flow Logo">
             <div class="footersocialmedia">
-                <div class="socialmedia"></div>
                     <img src="images/linkedinlogowhite.svg" alt="LinkedIn Logo">
                     <img src="images/xlogowhite.svg" alt="XLogo">
                     <img src="images/instagramlogowhite.svg" alt="InstagramLogo">
@@ -106,8 +103,9 @@
             <div></div>
     </footer>
     <div class="complianceline">
-        <div>Copyright</div>
-        <div>Privacy Policy</div>
-        <div>Terms of service</div>
+        <p>Copyright</p>
+        <p>Privacy Policy</p>
+        <p>Terms of service</p>
     </div>
+</body>
 </html>
