New contact page added + some modifications
Added a whole new page + made some specific mods

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-
+        <link rel="stylesheet" href="styles.css">
+        <title>Flexible mortgages for the new world</title>
+        <link rel="icon" href="images/Flowlogo.png">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-        
+        <nav>
+            <a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html"><img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo"></a>
+            <ul>
+                <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html">Home</a></li>
+                <li>About</li>
+                <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/contact.html">Contact</a></li>
+            </ul>
+            <button>Get a call</button>
+        </nav>
+
+        <header>
+            <h1>Get in touch with us</h1>
+            <h4 class="subtitle">We are ready to give you the extra information you may need.</h4>
+        </header>
+
+        <section id="contactmethods">
+            <div class="contactmethod">
+                <img src="images/iconphone.svg" alt="Icon of a phone">
+                <p class="pcontactmethods">Speak to an agent and get personalized assistance</p>
+                <button class="btncontact">Call us</button>
+            </div>
+            <div class="contactmethod">
+                <img src="images/iconchat.svg" alt="Icon of a phone">
+                <p class="pcontactmethods">Experience a better customer support with our 24/7 live chat</p>
+                <button class="btncontact">Chat with us</button>
+            </div>
+            <div class="contactmethod">
+                <img src="images/iconwhatsapp.svg" alt="Icon of a phone">
+                <p class="pcontactmethods">Text us through WhatsApp. We will reply during the day</p>
+                <button class="btncontact">Text us</button>
+            </div>
+        </section>
+
+        <footer>
+            <div class="footerinfo">
+                <h2 class="h2footer">Go free, now</h2>
+                <p class="pfooter">Flow is the new way to own a property. We aim to make everyone's live more fun, flexible and global.</p>
+                <img class="flowlogofooter" src="images/flowlogogray.png" alt="Flow Logo">
+                <div class="footersocialmedia">
+                        <img src="images/linkedinlogowhite.svg" alt="LinkedIn Logo">
+                        <img src="images/xlogowhite.svg" alt="XLogo">
+                        <img src="images/instagramlogowhite.svg" alt="InstagramLogo">
+                    </div>
+                </div>
+            </div>
+                <div></div>
+                <div class="footerlinks">
+                    <h4 class="footerlinkstitle">Product</h4>
+                    <h5>Flow's flexible mortgage</h5>
+                    <h5>Available cities</h5>
+                    <h5>Mortgage calculator</h5>
+                    <h5>People who trust on us</h5>
+                </div>
+                <div class="footerlinks">
+                    <h4 class="footerlinkstitle">About us</h4>
+                    <h5>Our mission</h5>
+                    <h5>Our team</h5>
+                    <h5>Flow on the news</h5>
+                </div>
+                <div></div>
+        </footer>
+        <div class="complianceline">
+            <p>Copyright</p>
+            <p>Privacy Policy</p>
+            <p>Terms of service</p>
+        </div>
     </body>
 </html>
