--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 <body>
     <nav>
-        <img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo">
+        <a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html"><img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo"></a>
         <ul>
-            <li>Home</li>
+            <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html">Home</a></li>
             <li>About</li>
-            <li>Contact</li>
+            <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/contact.html">Contact</a></li>
         </ul>
         <button>Get a call</button>
     </nav>
 
     </header id="hero">
         <h1 id="herotitle">A new way to live, globally. </h1>
-        <h4 id="herosubtitle">Flow is the first mortgage that allows you to swap homes, whenever you want.</h4>
+        <h4 class="subtitle">Flow is the first mortgage that allows you to swap homes, whenever you want.</h4>
         <img id="heroimage" src="images/house.svg">
         <div id="herobuttons">           
             <button class="herobtnmoreinfo">More info</button>
