--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
         <h2 id="featurestitle">What can you expect from Flow?</h2>
             <div class="featuresdiv">
                 <div class="feature">
-                    <h3>The best of both rent and mortage</h3>
-                    <p>Pay monthly to get a property in the future, but the payment is not attached to a single building.</p>
                     <img src="images/rent.svg" alt="Illustration of a flat in a neighbourhood">
+                    <h3 class="titlefeature">The best of both rent and mortage</h3>
+                    <p>Pay monthly to get a property in the future, but the payment is not attached to a single building.</p>
                 </div>
                 <div class="feature">
-                    <h3>Swap cities, fast.</h3>
-                    <p>Browse our catalog and move to you new city in less than 6 months. We'll take care of everything else.</p>
                     <img src="images/swap.svg" alt="Illustration of a woman standing up and walking">
+                    <h3 class="titlefeature">Swap cities, fast</h3>
+                    <p>Browse our catalog and move to you new city in less than 6 months. We'll take care of everything else.</p>
                 </div>
                 <div class="feature">
-                    <h3>Owner of your future</h3>
-                    <p>Get back your money whenever you want. We'll keep it for you, as long as you want.</p>
                     <img src="images/owner.svg" alt="Illustration of a family of three members: mother, kid and father hanging their hands together while walking">
+                    <h3 class="titlefeature">Owner of your future</h3>
+                    <p>Get back your money whenever you want. We'll keep it for you, as long as you want.</p>
                 </div>
             </div>
     </section>
