Finished v1 adding about section
Finished v1 of Flow's website, adding the last page: about-html.

Kept it simple to get to know the basics of HTML and CSS (semantic HTML, Flex, Grid, etc.)

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html"><img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo"></a>
             <ul>
                 <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html">Home</a></li>
-                <li>About</li>
+                <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/about.html">About</a></li>
                 <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/contact.html">Contact</a></li>
             </ul>
             <button>Get a call</button>
