--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html"><img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo"></a>
         <ul>
             <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html">Home</a></li>
-            <li>About</li>
+            <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/about.html">About</a></li>
             <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/contact.html">Contact</a></li>
         </ul>
         <button>Get a call</button>
@@ -21,10 +21,10 @@
 
     </header id="hero">
         <h1 id="herotitle">A new way to live, globally. </h1>
-        <h4 class="subtitle">Flow is the first mortgage that allows you to swap homes, whenever you want.</h4>
-        <img id="heroimage" src="images/house.svg">
+        <h3 class="subtitle">Flow is the first mortgage that allows you to swap homes, whenever you want.</h3>
+        <img class="headerimg" src="images/house.svg">
         <div id="herobuttons">           
-            <button class="herobtnmoreinfo">More info</button>
+            <button class="btnorange">More info</button>
             <button class="herobtncalculate">Calculate</button>
         </div>
     </header>
@@ -67,7 +67,7 @@
             <h2>Live your life in another way</h2>
             <p>Flow flexible mortgage is designed to move with you, wherever you want or need. Don't worry anymore about the downsides of rents or to sell your property if you want to move to another place.</p>
             <p>Let us know with 6 months of advance where you want to live, and we will take care of the hassle of switching homes</p>
-            <button>Know more about Flexible Mortgage</button>
+            <button class="btnorange">Know more about Flexible Mortgage</button>
         </div>
         <div class="f1img">
             <img src="images/rent.svg" alt="Illustration depicting a building and two people walking on the street">
@@ -88,17 +88,17 @@
         </div>
             <div></div>
             <div class="footerlinks">
-                <h4 class="footerlinkstitle">Product</h4>
-                <h5>Flow's flexible mortgage</h5>
-                <h5>Available cities</h5>
-                <h5>Mortgage calculator</h5>
-                <h5>People who trust on us</h5>
+                <h3 class="footerlinkstitle">Product</h3>
+                <p class="pfooterlinks">Flow's flexible mortgage</p>
+                <p class="pfooterlinks">Available cities</p>
+                <p class="pfooterlinks">Mortgage calculator</p>
+                <p class="pfooterlinks">People who trust on us</p>
             </div>
             <div class="footerlinks">
-                <h4 class="footerlinkstitle">About us</h4>
-                <h5>Our mission</h5>
-                <h5>Our team</h5>
-                <h5>Flow on the news</h5>
+                <h3 class="footerlinkstitle">About us</h3>
+                <p class="pfooterlinks">Our mission</p>
+                <p class="pfooterlinks">Our team</p>
+                <p class="pfooterlinks">Flow on the news</p>
             </div>
             <div></div>
     </footer>
