--- a/about.html
+++ b/about.html
@@ -82,8 +82,8 @@
                 <div></div>
         </footer>
         <div class="complianceline">
-            <p>Copyright</p>
-            <p>Privacy Policy</p>
-            <p>Terms of service</p>
+            <p class="compliancetxt">Copyright</p>
+            <p class="compliancetxt">Privacy Policy</p>
+            <p class="compliancetxt">Terms of service</p>
         </div>
     </body>
