--- a/contact.html
+++ b/contact.html
@@ -56,24 +56,24 @@
             </div>
                 <div></div>
                 <div class="footerlinks">
-                    <h4 class="footerlinkstitle">Product</h4>
-                    <h5>Flow's flexible mortgage</h5>
-                    <h5>Available cities</h5>
-                    <h5>Mortgage calculator</h5>
-                    <h5>People who trust on us</h5>
+                    <h3 class="footerlinkstitle">Product</h3>
+                    <p class="pfooterlinks">Flow's flexible mortgage</p>
+                    <p class="pfooterlinks">Available cities</p>
+                    <p class="pfooterlinks">Mortgage calculator</p>
+                    <p class="pfooterlinks">People who trust on us</p>
                 </div>
                 <div class="footerlinks">
-                    <h4 class="footerlinkstitle">About us</h4>
-                    <h5>Our mission</h5>
-                    <h5>Our team</h5>
-                    <h5>Flow on the news</h5>
+                    <h3 class="footerlinkstitle">About us</h3>
+                    <p class="pfooterlinks">Our mission</p>
+                    <p class="pfooterlinks">Our team</p>
+                    <p class="pfooterlinks">Flow on the news</p>
                 </div>
                 <div></div>
         </footer>
         <div class="complianceline">
-            <p>Copyright</p>
-            <p>Privacy Policy</p>
-            <p>Terms of service</p>
+            <p class="compliancetxt">Copyright</p>
+            <p class="compliancetxt">Privacy Policy</p>
+            <p class="compliancetxt">Terms of service</p>
         </div>
     </body>
 </html>
