Updated website URLs

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <nav>
-        <a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html"><img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo"></a>
+        <a href="https://flowweb.netlify.app"><img id="logonavbar" src="images/flowlogo.png" alt="Flow Logo"></a>
         <ul>
-            <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/index.html">Home</a></li>
-            <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/about.html">About</a></li>
-            <li><a href="file:///Users/rubengodoyprats/Desktop/dev/website/first-website/contact.html">Contact</a></li>
+            <li><a href="https://flowweb.netlify.app/">Home</a></li>
+            <li><a href="https://flowweb.netlify.app/about">About</a></li>
+            <li><a href="https://flowweb.netlify.app/contact">Contact</a></li>
         </ul>
         <button>Get a call</button>
     </nav>
