--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="styles.css">
         <title>Flexible mortgages for the new world</title>
         <link rel="icon" href="images/Flowlogo.png">
+        <meta name="description" content="Flow is the new way to own a property. We aim to make everyone's live more fun, flexible and global."/>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
