Added simple form

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,28 @@
             </div>
         </section>
 
+        <section>
+            <h2>Or fill our form</h2>
+            <form method="post" action="/">
+                <fieldset class="contactform">
+                    <legend>Personal information</legend>
+
+                    <label>Name:</label>
+                    <input type="text" name="firstname" placeholder="John">
+
+                    <label>Surname:</label>
+                    <input type="text" name="surname" placeholder="Doe">
+
+                    <label>Email:</label>
+                    <input type="email" name="email" placeholder="johndoe@mail.com">
+
+                    <label>Phone:</label>
+                    <input type="tel" name="phone" placeholder="+1 (887) 445-5739">
+
+                </fieldset>
+            </form>
+        </section>
+
         <footer>
             <div class="footerinfo">
                 <h2 class="h2footer">Go free, now</h2>
