--- a/contact.html
+++ b/contact.html
@@ -50,16 +50,16 @@
                     <legend>Personal information</legend>
 
                     <label>Name:</label>
-                    <input type="text" name="firstname" placeholder="John">
+                    <input type="text" name="firstname" placeholder="John" required>
 
                     <label>Surname:</label>
-                    <input type="text" name="surname" placeholder="Doe">
+                    <input type="text" name="surname" placeholder="Doe" required>
 
                     <label>Email:</label>
-                    <input type="email" name="email" placeholder="johndoe@mail.com">
+                    <input type="email" name="email" placeholder="johndoe@mail.com" required>
 
                     <label>Phone:</label>
-                    <input type="tel" name="phone" placeholder="+1 (887) 445-5739">
+                    <input type="tel" name="phone" placeholder="+1 (887) 445-5739" pattern="[0-9] {9}">
 
                 </fieldset>
             </form>
